--- a/.github/workflows/secretos.yml
+++ b/.github/workflows/secretos.yml
@@ -14,6 +14,8 @@ jobs:
               run: echo "$SALUDO, ${{ vars.NOMBRE }}, hoy es ${{ ENV.DIA_DE_SEMANA }}."
     saludo-secretos:
       runs-on: ubuntu-latest
+      env:
+            SALUDO: Hola
       steps:
         - name: Saludo secreto
           run: echo "$SALUDO, ${{ vars.NOMBRE }}, tu contraseña es ${{ secrets.CONTRASENA }}."
